--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,4 +1,6 @@
 @import "bootstrap/scss/bootstrap";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
 *{
     margin: 0;
     padding: 0;
